2001-08-09  Martin Baulig  <baulig@suse.de>

	* configure.in: Don't check for CSL anymore.

2001-08-06  Darin Adler  <darin@bentspoon.com>

	* configure.in:
	* Makefile.am:
	Start building the tools directory again, but don't bother
	building the intl directory any more.

2001-08-06  Stanislav Visnovsky  <visnovsky@nenya.ms.mff.cuni.cz>

	* configure.in: Added sk to ALL_LINGUAS.

2001-08-04  Martin Baulig  <baulig@suse.de>

	Released libgnome 1.100.0 "Nature One".

	* configure.in: Bumped version number to 1.100.0 and
	GNOME_PLUGIN_SERIAL to 3.

2001-08-04  Martin Baulig  <baulig@suse.de>

	* NEWS: Updated for 1.100.0.

	We're almost done for the release :-)
	
	Just let me watch the rest of the Nature One broadcast in TV
	and then I'll increment the version number and do the distcheck.

2001-08-04  Martin Baulig  <baulig@suse.de>

	* NEWS: Started to write the release notes for 1.100.0.

	* configure.in: Require the latest version of everything and
	bump version number to 1.99.0.

2001-08-04  Martin Baulig  <baulig@suse.de>

	* configure.in (GNOME_PLUGIN_SERIAL): Bump to 2.

2001-08-03  Martin Baulig  <baulig@suse.de>

	* Makefile.am: Don't build the monikers/ and tools/ subdirs.

2001-08-03  Martin Baulig  <baulig@suse.de>

	* configure.in (LIBGNOME): Require libbonobo >= 1.100.0.
	(LIBGNOME_CSL): Optionally depend on CSL
	(http://www.arts-project.org).

2001-08-01  Michael Meeks  <michael@ximian.com>

	* configure.in: prune redundant pkgconfig checks, let the
	deps do the work ...

	* port to bonobo-activation.

2001-07-31  Martin Baulig  <baulig@suse.de>

	* monikers/: Don't build this directory.

2001-07-28  ERDI Gergo  <cactus@cactus.rulez.org>

	* configure.in: depend on libbonobo 1.98.0

2001-07-27  Michael Meeks  <michael@ximian.com>

	* configure.in: add xml-i18n tools.

	* tests/test-moniker.c (main): add.

	* tests/Makefile.am: upd.

2001-07-14  Martin Baulig  <baulig@suse.de>

	* configure.in (BONOBO_IDLDIR): AC_SUBST this.
