@@ -87,8 +87,6 @@ Makefile
 po/Makefile.in
 idl/Makefile
 tests/Makefile
-tools/Makefile
-tools/gnome-maketypes.awk
 libgnome/Makefile
 libgnome/libgnome-2.0.pc
 ])
