@@ -1,9 +1,0 @@
-bin_SCRIPTS = \
-	gnome-maketypes.awk		\
-	gnome-makeenums.pl
-
-EXTRA_DIST = \
-	$(bin_SCRIPTS)
-
-
-
